--- a/index.html
+++ b/index.html
@@ -1,85 +1,264 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
-
-  <title>Hv</title>
-  <meta name="description" content="hoja de vida web con el preprocesador de html jade">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Hv</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">hoja de vida web con el preprocesador de html jade</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/edgardeveloper2014/hv/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/edgardeveloper2014/hv/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/edgardeveloper2014/hv" class="code">View Hv on GitHub</a>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Hv Edgar Duarte</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="description" content="description">
+    <meta name="keywords" content="keywords">
+    <meta name="author" content="author">
+    <meta name="robots" content="index, follow">
+    <link rel="icon" href="img/favicon.png" type="image/x-icon">
+    <link href="css/icon.css" rel="stylesheet">
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection">
+  </head>
+  <body>
+    <nav role="navigation" class="light-blue lighten-1">
+      <div class="nav-wrapper container"><a href="index.html" id="logo-container" class="brand-logo"> <img src="img/logo-edeveloper.png" alt="edeveloper" class="img-65"></a>
+        <ul class="right hide-on-med-and-down">
+          <li> <a href="index.html" class="class">Acerca</a></li>
+          <li> <a href="portafolio.html" class="class">Portafolio</a></li>
+          <li> <a href="certificacion.html" class="class">Certificación  </a></li>
+        </ul>
+        <ul id="nav-mobile" class="side-nav">   
+          <li> <a href="index.html" class="class">Acerca</a></li>
+          <li> <a href="portafolio.html" class="class">Portafolio</a></li>
+          <li> <a href="certificacion.html" class="class">Certificación</a></li>
+        </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+    <div id="index-banner" class="section no-pad-bot">
+      <div class="container">
+        <p id="acerca"> </p>
+        <h1 class="header center orange-text">Edgar Humberto Piñeros Duarte</h1>
+        <div class="row center">
+          <h3 class="header col s12 light orange-text"> Perfil Profesional </h3>
         </div>
-        <span class="blc"></span><span class="trc"></span>
+        <div class="row center">
+          <p class="waves-effect">
+            Programador web con un año de experiencia laboral  desarrollando páginas web con HTML4 y 5, JQUERY, PHP
+            Conocimientos en HTML versión 4 y 5 , CSS , JAVASCRIPT , JQUERY , JAVA , JSP , 
+            en motores de base de datos como MYSQL , SQLSERVER  y en RESPONSIVE WEB DESIGN para adaptar una pagina web a móviles y pc´s.
+            Interes en aprender nuevas tecnologías de desarrollo.
+          </p>
         </div>
-        <article class="markdown-body">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-        </article>
       </div>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/edgardeveloper2014" class="avatar"><img src="https://avatars3.githubusercontent.com/u/8209845?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/edgardeveloper2014">edgardeveloper2014</a> maintains <a href="https://github.com/edgardeveloper2014/hv">Hv</a></p>
-
-
+    <div class="container">
+      <div class="section">
+        <h3 class="center orange-text">Datos Basicos</h3>
+        <div class="row">
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center light-blue-text"><i class="material-icons">email</i></h2>
+              <h5 class="center">Email</h5>
+              <p class="light center"> hv.edgarduarte@gmail.com</p>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center light-blue-text"><i class="material-icons">perm_identity</i></h2>
+              <h5 class="center">  Edad</h5>
+              <p class="light center">31 años</p>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center light-blue-text"><i class="material-icons">store</i></h2>
+              <h5 class="center">  Dirección</h5>
+              <p class="light center">  Dg 16b 104-17, Bogotá, Cundinamarca</p>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center light-blue-text"><i class="material-icons">today</i></h2>
+              <h5 class="center">  Fecha de nacimiento</h5>
+              <p class="light center">  18 de diciembre 1984</p>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center light-blue-text"><i class="material-icons">stay_primary_portrait</i></h2>
+              <h5 class="center">  Celular</h5>
+              <p class="light center">  3115364696 </p>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center light-blue-text"><i class="material-icons">contact_phone</i></h2>
+              <h5 class="center">  Telefono</h5>
+              <p class="light center">  4703770               </p>
+            </div>
+          </div><br><br>
+        </div>
       </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      <div class="section">
+        <h3 class="center orange-text">Estudios</h3>
+        <table class="bordered centered highlight">
+          <thead>
+            <tr>
+              <th>titulo</th>
+              <th>fecha</th>
+              <th>institución</th>
+              <th>dirección</th>
+              <th>lugar de estudio</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Tecnólogo en análisis y desarrollo de sistemas de información</td>
+              <td>2010 hasta 2011</td>
+              <td>Sena Centro de gestión de mercados, logística y tecnologías de la información</td>
+              <td>calle 52 13-65</td>
+              <td>Bogotá</td>
+            </tr>
+            <tr>     
+              <td>Tecnico en procesamiento de frutas y hortalizas</td>
+              <td>2008 hasta 2009</td>
+              <td>Sena centro nacional de hoteleria,  turismo y alimentos</td>
+              <td>Calle 15 31-42</td>
+              <td>Bogotá</td>
+            </tr>
+            <tr>
+              <td>Bachiller Academico</td>
+              <td>1997 hasta 2003</td>
+              <td>Pablo Neruda</td>
+              <td>Calle 16f bis 102-70</td>
+              <td>Bogotá</td>
+            </tr>
+            <tr>     
+              <td>primaria</td>
+              <td>1994 hasta 1997</td>
+              <td>Republica de finlandia</td>
+              <td>Carrera 72b 44-19sur</td>
+              <td>Bogotá</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="section">
+      </div>
+      <div class="section">
+        <h3 class="center orange-text">Experiencia Laboral</h3>
+        <table class="bordered centered highlight">
+          <thead>
+            <tr>
+              <th>NOMBRE EMPRESA</th>
+              <th>CARGO</th>
+              <th>FUNCIONES</th>
+              <th>JEFE INMEDIATO</th>
+              <th>TELEFONO</th>
+              <th>TIEMPO LABORADO</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>ITO SOFTWARE SAS</td>
+              <td>Desarrollador Junior</td>
+              <td>desarrollo , modificación, soporte de aplicaciones web con el framework php Symphony2.4 </td>
+              <td>Jhonattan Alférez</td>
+              <td>2872961</td>
+              <td>Octubre 6 de 2014 - marzo 23 de 2015</td>
+            </tr>
+            <tr>     
+              <td>DSL DATA SOLUTIONS</td>
+              <td>Programador web</td>
+              <td>Desarrollo , modificación , soporte aplicaciones web realizadas por la empresa.</td>
+              <td>Genner Puello</td>
+              <td>6 78 85 21-317 430 4027</td>
+              <td>Julio 22 de 2013 - mayo 20 de 2014</td>
+            </tr>
+            <tr>     
+              <td>AGRAF LTDA</td>
+              <td>Programador web</td>
+              <td>Pasar Interfaz gráfica a HTML, programación de páginas web el chingon.co y agrafltda.com, adaptar esas páginas a móviles usando la tecnología responsive web design, manejo ftp, manejo de hosting, manejo del programa de edición de imagenes Photoshop.</td>
+              <td>Alexander Garzón</td>
+              <td>6 95 59 45-317 440 7599</td>
+              <td>Febrero 26 de 2013 – junio 3 de 2013</td>
+            </tr>
+            <tr>     
+              <td>ETHOS SOLUCIONES DE SOFTWARE</td>
+              <td>Ingeniero Aprendiz </td>
+              <td>realizar documentación y soporte de aplicaciones web  de la empresa, desarrollos nuevos, manejo de motor de base de datos Oracle, creación de webservices con java.</td>
+              <td>Alejandra Amaya</td>
+              <td>2 44 01 33</td>
+              <td>Abril 2012 – julio 2012</td>
+            </tr>
+            <tr>
+              <td>ALIMENAT E.U</td>
+              <td>auxiliar de producción</td>
+              <td>Empaque, etiquetado , pesaje de productos lacteos ,carnicos,panaderos.</td>
+              <td>Jarol Moreno</td>
+              <td>2 16 99 01</td>
+              <td>Octubre 2008 - marzo de 2009</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="section">
+        <h3 class="center orange-text">REFERENCIAS FAMILIARES </h3>
+        <table class="bordered centered highlight">
+          <thead>
+            <tr>
+              <th>NOMBRE</th>
+              <th>CARGO</th>
+              <th>EMPRESA</th>
+              <th>TELEFONO</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>ANGIE VIVIANA PUENTES</td>
+              <td>Callcenter</td>
+              <td>CITIBANK</td>
+              <td>3204190443-4703770</td>
+            </tr>
+            <tr>          
+              <td>HERNAN DIAZ ROA</td>
+              <td>funcionario ETB</td>
+              <td>ETB</td>
+              <td>3152577662-7385714</td>
+            </tr>
+          </tbody>
+        </table>
+        <h3 class="center orange-text">REFERENCIAS PERSONALES                   </h3>
+        <table class="bordered centered highlight">
+          <tr>   
+            <td>FRANKLIN MEDINA GUTIÉRREZ</td>
+            <td>Analista</td>
+            <td>Accenture Ltda</td>
+            <td>3208493553</td>
+          </tr>
+          <tr>
+            <td>VIVIANA PÉREZ ROA</td>
+            <td>Ingeniera de sistemas</td>
+            <td>Instituto de medicina legal</td>
+            <td>2981710-3202901165</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <footer class="page-footer teal">
+      <div class="container">
+        <div class="row">
+          <div class="col 13 s12">
+            <ul>
+              <li><a href="https://www.facebook.com/Programer-262606387264668/" target="_blank"> <img src="img/social/icon-facebook.png" alt="Facebook"></a></li>
+              <li><a href="https://twitter.com/edgar_developer" target="_blank"> <img src="img/social/icon-twitter.jpeg" alt="Twitter"></a></li>
+              <li><a href="https://co.linkedin.com/in/edgar-duarte-55b01636" target="_blank"> <img src="img/social/linkedin.png" alt="LinkedIn"></a></li>
+              <li><a href="https://www.youtube.com/" target="_blank"><img src="img/social/icon-youtube.png" alt="Youtube "></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">   <img src="img/edeveloper.png" alt="edeveloper" class="center"></div>
       </div>
     </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/edgardeveloper2014/hv/tarball/master" class="tar">tar</a><a href="https://github.com/edgardeveloper2014/hv/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.js"></script>
+    <script type="text/javascript" src="js/init.js"></script>
+    <script type="text/javascript" src="js/slider.js"></script>
+  </body>
 </html>
